Creado mediante Colaboratory

--- a/Examen_primer_parcial.ipynb
+++ b/Examen_primer_parcial.ipynb
@@ -2811,7 +2811,7 @@
         "id": "mHKGdMRpgkiN"
       },
       "source": [
-        "# **Prediccion de Genero**"
+        "# **Predicción de Genero**"
       ]
     },
     {
